# zeromq-experiment

./: .gitignore  CMakeLists.txt  README.md  main.c
.github/workflows/: cmake-single-platform.yml  ros.yml  ros.yml.disabled
alfredPennyworth/: Makefile  cliente.c  worker.c
alfredPennyworth_highPayload/: broker.c  cliente.c  worker.c
common/: CMakeLists.txt  utils.c  utils.h  zhelpers.h
docs/: building.md  real-time-tricks.md
majordome-unstable/: Makefile  client.c
pub_sub/: Makefile  publisher.c  subscriber.c
pub_sub_ipc/: subscriber.c
results/: antonio_0mq_maj_diff.csv  antonio_0mq_maj_equal.csv  antonio_0mq_pub_diff_ipc.csv  antonio_0mq_pub_diff_tcp.csv  antonio_0mq_pub_equal_ipc.csv  antonio_0mq_pub_equal_tcp.csv  antonio_ros2_maj_diff.csv  antonio_ros2_maj_equal.csv  antonio_ros2_pub_diff.csv  antonio_ros2_pub_equal.csv  david_results.xml  david_ros_majord_diff.csv  david_ros_majord_nois.csv  david_ros_majord_same.csv  david_ros_pubsub_diff.csv  david_ros_pubsub_nois.csv  david_ros_pubsub_same.csv  david_zmq_majord_diff.csv  david_zmq_majord_nois.csv  david_zmq_majord_same.csv  david_zmq_pubsub_diff_ipc.csv  david_zmq_pubsub_diff_tcp.csv  david_zmq_pubsub_nois_ipc.csv  david_zmq_pubsub_nois_tcp.csv  david_zmq_pubsub_same_ipc.csv  david_zmq_pubsub_same_tcp.csv
ros2/src/alfredpennyworth/: CMakeLists.txt  package.xml
ros2/src/alfredpennyworth/src/: broker.cpp  cliente.cpp  worker.cpp
ros2/src/plotter_time/: CMakeLists.txt
ros2/src/plotter_time/src/msg/: Plottime.msg
ros2/src/pub_sub/: CMakeLists.txt  package.xml
ros2/src/pub_sub/src/: publisher.cpp  subscriber.cpp
zeromq/: CMakeLists.txt
zeromq/majordomo/: CMakeLists.txt
zeromq/majordomo/alfredPennyworth/: CMakeLists.txt  broker.c  cliente.c  worker.c
zeromq/majordomo/alfredPennyworth_deprecated/: CMakeLists.txt  cliente.c
zeromq/majordomo/alfredPennyworth_highPayload/: Makefile
zeromq/majordomo/majordome-unstable/: CMakeLists.txt  client.c  majordome.c
zeromq/pub_sub/: CMakeLists.txt
zeromq/pub_sub/ipc/: publisher.c  subscriber.c
zeromq/pub_sub/tcp/: CMakeLists.txt  Makefile  plot.py  publisher.c  subscriber.c
